# FentonKarma_SpiralWaveTracking_AMethodsComparison

./: .gitignore  CMakeLists.txt  ComputeFK.cu  ComputeFK.cuh  EvolvingPlot.py  FKpch.cpp  FKpch.h  README.md  Snapshot.py  StructureManagment.h  TipTrajectory.py  main.cpp
CMakeLocalBuild/: CMakeLists.txt
CUDAfiles/: ComputeFK.cuh
PreCompiledHeader/: FKpch.cpp
ResultingVisuals/: EvolvingPlot.py  TipTrajectory.py
Structures/: StructureManagment.h
